step down compatibility to java 8